--- a/nginx/config/mobifonehanoi.local.conf
+++ b/nginx/config/mobifonehanoi.local.conf
@@ -1,17 +1,37 @@
 server {
-    # listen 443 ssl;
     listen 80;
+    #listen 443 ssl http2;
+    server_name .mobifonehanoi.local;
+    root "/var/www/html/ping24h_web_ban_sim_laravel/public";
 
-    # ssl_certificate     /Users/sonhaichu/Projects/certs/reflaunt.local+4.pem;
-    # ssl_certificate_key /Users/sonhaichu/Projects/certs/reflaunt.local+4-key.pem;
+    #gzip on;
+    #gzip_types      text/plain text/css text/html application/xml application/javascript;
+    #gzip_proxied    no-cache no-store private expired auth;
+    #gzip_min_length 1000;
 
-    server_name api.gkm-elearning.local;
-    add_header Cache-Control no-cache;
-    client_max_body_size 100m;
+    index index.html index.htm index.php;
+
+    charset utf-8;
+
     location / {
-        #if ($http_origin ~* (https?://[^/]*\.styletribute\.com(:[0-9]+)?)$) {
-        #    set $cors "true";
-        #}
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    #location ~*  \.(jpg|jpeg|png|gif|ico|css|js|eot|otf|ttf|woff|woff2)$ {
+    #   expires 7d;
+    #}
+
+    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /robots.txt  { access_log off; log_not_found off; }
+
+    access_log off;
+    # error_log  /var/log/nginx/leetee-local.com-error.log error;
+
+    sendfile off;
+
+    client_max_body_size 100m;
+
+    location ~ \.php$ {
         set $cors "true";
         if ($request_method = 'OPTIONS') {
             set $cors "${cors}options";
@@ -49,18 +69,31 @@ server {
             add_header 'Access-Control-Allow-Origin' "$http_origin";
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,,If-Modified-Since,Rf-Retailer-Public-Key,Rf-Retailer-Language';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,,If-Modified-Since,x-xsrf-token';
             add_header 'Content-Length' 0;
             add_header 'Content-Type' 'text/plain charset=UTF-8';
             return 204;
         }
-        # proxy_pass http://192.168.1.186:3000;
-        proxy_pass http://192.168.1.127:3000;
-        proxy_http_version 1.1;
-        proxy_set_header   Upgrade $http_upgrade;
-        proxy_set_header   Connection "upgrade";
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass   php7.4:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+
+
+        fastcgi_intercept_errors off;
+        fastcgi_buffer_size 64k;
+        fastcgi_buffers 16 32k;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
+        fastcgi_read_timeout 300;
     }
+
+    location ~ /\.ht {
+        deny all;
+    }
+
+    #ssl_certificate     /home/sonhaichu/cert/js-sdk.local.com+1.pem;
+    #ssl_certificate_key /home/sonhaichu/cert/js-sdk.local.com+1-key.pem;
 }
