--- a/nginx/config/phpmyadmin.local.conf
+++ b/nginx/config/phpmyadmin.local.conf
@@ -7,7 +7,7 @@ server {
 
     server_name phpmyadmin.local;
     add_header Cache-Control no-cache;
-    client_max_body_size 100m;
+    client_max_body_size 200M;
     location / {
         proxy_pass http://phpmyadmin;
         proxy_http_version 1.1;
