--- a/nginx/config/api.reflaunt.local.conf
+++ b/nginx/config/api.reflaunt.local.conf
@@ -55,6 +55,7 @@ server {
         #     return 204;
         # }
         proxy_pass http://192.168.1.128:3030;
+        # proxy_pass http://192.168.1.7:3030;
         proxy_http_version 1.1;
         proxy_set_header   Upgrade $http_upgrade;
         proxy_set_header   Connection "upgrade";
