--- a/nginx/config/mobifonehanoi.local.conf
+++ b/nginx/config/mobifonehanoi.local.conf
@@ -29,7 +29,7 @@ server {
 
     sendfile off;
 
-    client_max_body_size 100m;
+    client_max_body_size 100M;
 
     location ~ \.php$ {
         set $cors "true";
@@ -83,8 +83,9 @@ server {
 
 
         fastcgi_intercept_errors off;
-        fastcgi_buffer_size 64k;
-        fastcgi_buffers 16 32k;
+        fastcgi_busy_buffers_size 512k;
+        fastcgi_buffer_size 512k;
+        fastcgi_buffers 16 512k;
         fastcgi_connect_timeout 300;
         fastcgi_send_timeout 300;
         fastcgi_read_timeout 300;
