--- a/nginx/config/mobifonehanoi.local.conf
+++ b/nginx/config/mobifonehanoi.local.conf
@@ -69,7 +69,7 @@ server {
             add_header 'Access-Control-Allow-Origin' "$http_origin";
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,,If-Modified-Since,x-xsrf-token';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,,If-Modified-Since,x-xsrf-token,enctype';
             add_header 'Content-Length' 0;
             add_header 'Content-Type' 'text/plain charset=UTF-8';
             return 204;
