--- a/nginx/config/test-wp.local.conf
+++ b/nginx/config/test-wp.local.conf
@@ -1,8 +1,8 @@
 server {
     listen 80;
     # listen 443 ssl http2;
-    server_name .laravel-mix.local;
-    root "/var/www/html/webpress-theme/laravel-mix/public";
+    server_name .test-wp.local;
+    root "/var/www/html/test-wp";
 
     index index.html index.htm index.php;
 
