--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -8,7 +8,8 @@ server {
     location / {
         try_files $uri $uri/ /index.php$is_args$query_string;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php8.0:9000;
+        # fastcgi_pass php8.0:9000;
+        fastcgi_pass php7.4:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
