--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ MYSQL_ROOT_PASSWORD=1111
 
 MONGO_ROOT_USERNAME=root
 MONGO_ROOT_PASSWORD=1111
+
+POSTGRES_ROOT_USERNAME=root
+POSTGRES_ROOT_PASSWORD=1111
